--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -133,6 +133,11 @@
 <td>名古屋伏見ビル管理規則</td>
 <td><a href="pdf/regulations_building.pdf" target="_blank">PDF</a></td>
 </tr>
+<tr>
+<th style="width: 35%;">法人登記</th>
+<td>法人登記（全部事項）</td>
+<td><a href="pdf/registration20240527.pdf" target="_blank">PDF</a></td>
+</tr>
 </table>
  
 </form>
