--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -107,6 +107,11 @@
 <td>勧誘方針のひな形</td>
 <td><a href="pdf/agency_solicitation.pdf" target="_blank">PDF</a></td>
 </tr>
+<tr>
+<th>参考資料</th>
+<td>認定ＮＰＯ法人ひょうご消費者ネットの記事</td>
+<td><a href="pdf/505_7.pdf" target="_blank">PDF</a></td>
+</tr>
 </table>
 
 <br><br>  
