--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/quotation_age2.html
@@ -236,7 +236,7 @@
         </div><br>
    
         <div class="btn">
-          <a href="pdf/list_premium_amount.pdf" target="_blank">一覧で見る（PDF）</a>
+          <a href="pdf/list_premium_amount2.pdf" target="_blank">一覧で見る（PDF）</a>
         </div><br>
        </div>
   
