--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/record2.html
@@ -150,7 +150,7 @@
        電話：052-228-1335</p>
      </td>
     </tr>
-  </table><br><br>
+  </table><br>
   
   <table class="ta5">
     <tr>
@@ -166,13 +166,13 @@
        <p style="text-align: right; padding-right: 20px;">敬具</p>
       </td>
     </tr>
-  </table><br><br>
+  </table><br>
 
   <table class="ta5">
     <tr>
       <td>記</td>
     </tr>
-  </table><br><br>
+  </table><br>
   
   <table class="ta6" style="width:500px;">
     <tr>
