--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -46,12 +46,6 @@
 <td style="width: 10%;"><a href="pdf/pamphlet.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
-<th style="width: 20%;">チラシ</th>
-<td>パルモの死亡保険のチラシ（仮）</td>
-<td style="width: 20%;">KZ2023・MD・000</td>
-<td style="width: 10%;"><a href="pdf/palmo_flyer_202404.pdf" target="_blank">PDF</a></td>
-</tr>
-<tr>
 <th>重要事項説明書</th>
 <td>きずなの死亡保険の重要事項説明書</td>
 <td>KZ2023・MD・004</td>
@@ -78,9 +72,26 @@
 <th>保険金請求書</th>
 <td>保険金請求時に必要な書類</td>
 <td>---</td>
-<td><a href="">---</a></td>
+<td><a href="pdf/claimform.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
+<th>保険証券</th>
+<td>成立後、保険契約者に郵送される書類</td>
+<td>KZ2023・MD・005</td>
+<td><a href="pdf/insurance_policy.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
+<th>更新証</th>
+<td>更新時、保険契約者に郵送される書類</td>
+<td>---</td>
+<td><a href="pdf/renewal_policy.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
+<th>更新手続きのご案内</th>
+<td>更新時、保険契約者に郵送される書類</td>
+<td>---</td>
+<td><a href="pdf/information_renewal.pdf" target="_blank">PDF</a></td>
+</tr>
 </table>
   
 <br><br>  
