--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -119,6 +119,16 @@
 <td><a href="pdf/agency_solicitation.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
+<th>勉強会資料</th>
+<td>2024年6月の勉強会資料</td>
+<td><a href="pdf/study _materials.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
+<th>重要事項説明書・概要</th>
+<td>重要事項説明書の概要</td>
+<td><a href="pdf/overview.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
 <th>参考資料</th>
 <td>認定ＮＰＯ法人ひょうご消費者ネットの記事</td>
 <td><a href="pdf/505_7.pdf" target="_blank">PDF</a></td>
