--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -66,6 +66,7 @@
   <label for="ac-7">■ 外部リンク</label>
   <div class="open">
     <a href="https://kizuna-ssi.jp/" target="_blank">コーポレートサイト</a>
+    <a href="https://kizuna-ssi.github.io/sub/index.html" target="_blank">コーポレートサイトv2</a>
     <a href="https://kizuna-ssi.net/" target="_blank">代理店向けサイト</a>
     <a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">金融庁 申請届出一覧</a>
     <a href="https://bsis.fsa.go.jp/appcommon/menu/GMCM0000201.xhtml" target="_blank">業務支援統合システム</a>
