--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -155,6 +155,11 @@
 <td><a href="pdf/regulation_scandal.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
+<th>④障がい者対応に関する規程</th>
+<td>障がい者対応に関する規程</td>
+<td><a href="pdf/disabled.pdf" target="_blank">PDF</a></td>
+</tr>
+<tr>
 <th>名古屋伏見ビル管理規則</th>
 <td>名古屋伏見ビル管理規則</td>
 <td><a href="pdf/regulations_building.pdf" target="_blank">PDF</a></td>
