--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -155,7 +155,7 @@
 <td><a href="pdf/regulation_scandal.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
-<th>④障がい者対応に関する規程</th>
+<th>障がい者対応に関する規程</th>
 <td>障がい者対応に関する規程</td>
 <td><a href="pdf/disabled.pdf" target="_blank">PDF</a></td>
 </tr>
