--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -45,7 +45,19 @@
     <span style="font-size: 100%;">TEL：03-6824-4768</span><span style="font-size: 80%;">（コールセンター）</span><br>
     <span style="font-size: 100%;">TEL：0120-178-041</span><span style="font-size: 80%;">（保険金請求センター）</span><br>
     <span style="font-size: 80%;">受付時間：10:00〜16:00（土・日・祝・年末年始を除く）</span>
-  </p>
+  </p><br>
+   <p>
+    <span style="font-size: 130%; font-weight: bold;">イズモ株式会社（パルモグループ）</span><br>
+    <span style="font-size: 100%; font-weight: bold;">【 総務部総務課 】</span><br>
+    <span style="font-size: 100%;">〒432-8017　静岡県浜松市中央区三組町158-1</span><br>
+    <span style="font-size: 100%;">TEL：053-450-5155</span><br>
+  </p><br>
+   <p>
+    <span style="font-size: 130%; font-weight: bold;">株式会社ハース・ジャパン</span><br>
+    <span style="font-size: 100%; font-weight: bold;">【 本社 】</span><br>
+    <span style="font-size: 100%;">〒465-0092　愛知県名古屋市名東区社台3-105</span><br>
+    <span style="font-size: 100%;">TEL：052-737-8900</span><br>
+  </p> 
 </section>
 
 
