--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -33,7 +33,7 @@
 <main>
   
 <section>
-<h2>ご連絡先</h2>
+<h2>連絡先</h2>
   <p>
     <span style="font-size: 130%; font-weight: bold;">株式会社きずな少額短期保険</span><br>
     <span style="font-size: 100%; font-weight: bold;">【 本社 】</span><br>
