--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -72,6 +72,8 @@
     <a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">金融庁FIMOS</a>
     <a href="https://ssi-d.jp/account/signin" target="_blank">少短ダッシュボード</a>
     <a href="https://kizuna-ssi.jp/wp-admin" target="_blank">Word Press</a>
+    <a href="https://kizuna-ssi.jp/agency01" target="_blank">パルモの死亡保険</a>
+    <a href="https://kizuna-ssi.jp/agency02" target="_blank">イズモの死亡保険</a>
   </div>
 </div>
 
