--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -19,8 +19,7 @@
     <a href="quotation_age.html">見積（通常告知型）</a>
     <a href="quotation_age2.html">見積（引受基準緩和型）</a>
     <!--<a href="quotation.html">見積（生年月日入力）</a>-->
-    <a href="application_print.html">申込書印刷</a>
-    <a href="https://docs.google.com/spreadsheets/d/1ZZmths0DOUjum6Z8du5KSf1CykTfAzshZkDtdu0jFP0/edit?usp=sharing" target="_blank">葬儀保険の比較</a>
+    <a href="application_print.html">申込書印刷（仮）</a>
     <a href="memo.html">memo</a>
   </div>
 </div>
@@ -72,8 +71,7 @@
     <a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">金融庁FIMOS</a>
     <a href="https://ssi-d.jp/account/signin" target="_blank">少短ダッシュボード</a>
     <a href="https://kizuna-ssi.jp/wp-admin" target="_blank">Word Press</a>
-    <a href="https://kizuna-ssi.jp/agency01" target="_blank">パルモの死亡保険</a>
-    <a href="https://kizuna-ssi.jp/agency02" target="_blank">イズモの死亡保険</a>
+    <a href="https://kizuna-ssi.jp/agency-lp" target="_blank">ランディングページ</a>
   </div>
 </div>
 
