--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -44,7 +44,9 @@
     <span style="font-size: 100%;">〒102-0076 東京都千代田区五番町6番地2 ホーマットホライゾンビル4F</span><br>
     <span style="font-size: 100%;">TEL：03-6824-4768</span><span style="font-size: 80%;">（コールセンター）</span><br>
     <span style="font-size: 100%;">TEL：0120-178-041</span><span style="font-size: 80%;">（保険金請求センター）</span><br>
-    <span style="font-size: 80%;">受付時間：10:00〜16:00（土・日・祝・年末年始を除く）</span>
+    <span style="font-size: 80%;">受付時間：10:00〜16:00（土・日・祝・年末年始を除く）</span><br><br>
+    <span style="font-size: 100%; font-weight: bold;">【 浜松事務所 】</span><br>
+    <span style="font-size: 100%;">〒432-8023 静岡県浜松市中央区鴨江2-1-13</span><br>
   </p><br>
    <p>
     <span style="font-size: 130%; font-weight: bold;">イズモ株式会社（パルモグループ）</span><br>
