--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -69,6 +69,16 @@
 
  </p>
 </section>
+
+<section>
+<h2>報告徴求命令の提出書類とスケジュール</h2>
+<p>毎月5日・15日・25日に以下のファイルを電子申請（Gビズ）で提出</p>
+<p>「②_新【別紙様式】実績（新規契約等（きずな少短））20240000.xlsx」</p>
+<p>電子申請の際の手続き名は「少額短期保険業者による報告又は資料の提出」</p>
+<p>上記に加えて、毎月10日にハースジャパン社の試算表（前々月末）を提出</p>
+
+ </p>
+</section>
  
 </main>
 
