--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -72,7 +72,8 @@
 
 <section>
 <h2>オフサイトの提出書類とスケジュール</h2>
-<p><span style="font-weight: bold;">毎月20日</span>に以下のファイルをFIMOSシステム（要Gビズ）で提出</p>
+<p><span style="font-weight: bold;">毎月20日</span>に以下のファイルを<a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">
+ FIMOSシステム（要Gビズ）で提出</p>
 <p><a href="https://drive.google.com/uc?export=download&id=1jd7h6f17rC_hpOnCyivWJG18rT649NXg" download>
  「F203134-N2030101_YP413_000_S100001_01-Ver202403((S100001)オフサイト・モニタリング報告様式（月次）［S100001］).xlsx」</a></p>
 </section>
