--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -72,7 +72,7 @@
     <a href="https://ssi-d.jp/account/signin" target="_blank">少短ダッシュボード</a>
     <a href="https://kizuna-ssi.jp/wp-admin" target="_blank">Word Press</a>
     <a href="https://kizuna-ssi.jp/agency-lp" target="_blank">ランディングページ</a>
-    <a href="https://www.css-osaka.com/ target="_blank">CSS</a>
+    <a href="https://www.css-osaka.com" target="_blank">CSS</a>
   </div>
 </div>
 
