--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -40,7 +40,30 @@
     <a href="contact.html">連絡先一覧</a>
   </div>
 </div>
+    
+<div class="ac-box">
+  <input id="ac-7" name="accordion-4" type="checkbox">
+  <label for="ac-7">■ 外部リンク</label>
+  <div class="open">
+    <a href="https://kizuna-ssi.jp/" target="_blank">コーポレートサイト</a>
+    <a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">金融庁 申請届出一覧</a>
+    <a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">金融庁FIMOS</a>
+    <a href="https://ssi-d.jp/account/signin" target="_blank">少短ダッシュボード</a>
+    <a href="https://kizuna-ssi.jp/wp-admin" target="_blank">Word Press</a>
+    <a href="https://www.css-osaka.com" target="_blank">CSS</a>
+  </div>
+</div>
 
+<div class="ac-box">
+  <input id="ac-7" name="accordion-4" type="checkbox">
+  <label for="ac-7">■ 作成中</label>
+  <div class="open">
+    <a href="https://kizuna-ssi.github.io/sub/index.html" target="_blank">コーポレートサイトv2</a>
+    <a href="https://kizuna-ssi.net/" target="_blank">代理店向けサイト</a>
+    <a href="https://kizuna-ssi.jp/agency-lp" target="_blank">ランディングページ</a>
+  </div>
+</div>
+  
 <!--
 <div class="ac-box">
   <input id="ac-5" name="accordion-3" type="checkbox">
@@ -59,21 +82,5 @@
   </div>
 </div>
 -->
-    
-<div class="ac-box">
-  <input id="ac-7" name="accordion-4" type="checkbox">
-  <label for="ac-7">■ 外部リンク</label>
-  <div class="open">
-    <a href="https://kizuna-ssi.jp/" target="_blank">コーポレートサイト</a>
-    <a href="https://kizuna-ssi.github.io/sub/index.html" target="_blank">コーポレートサイトv2</a>
-    <a href="https://kizuna-ssi.net/" target="_blank">代理店向けサイト</a>
-    <a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">金融庁 申請届出一覧</a>
-    <a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">金融庁FIMOS</a>
-    <a href="https://ssi-d.jp/account/signin" target="_blank">少短ダッシュボード</a>
-    <a href="https://kizuna-ssi.jp/wp-admin" target="_blank">Word Press</a>
-    <a href="https://kizuna-ssi.jp/agency-lp" target="_blank">ランディングページ</a>
-    <a href="https://www.css-osaka.com" target="_blank">CSS</a>
-  </div>
-</div>
-
+  
 </nav>
