--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -35,6 +35,27 @@
 
 <section>
 <h2>報告徴求命令の提出書類とスケジュール</h2>
+<table class="ta1">
+ <tr>
+  <th>スケジュール</th>
+  <td><span style="font-weight: bold;">毎月5日・15日・25日</span></td>
+ </tr>
+ <tr>
+  <th>提出物</th>
+  <td><a href="https://drive.google.com/uc?export=download&id=1DkDYNodCOOqgteZDAyo_nFy3Yb-XB13y">
+ 「②_新【別紙様式】実績（新規契約等（きずな少短））20240000.xlsx」</a>
+  </td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a></td>
+</tr>
+</table>
+ 
 <p><span style="font-weight: bold;">毎月5日・15日・25日</span>に以下のファイルを<a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">
  電子申請（要Gビズ）</a>で提出</p>
 <p><a href="https://drive.google.com/uc?export=download&id=1DkDYNodCOOqgteZDAyo_nFy3Yb-XB13y">
