--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -52,7 +52,19 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a></td>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ 手続き名は<span style="font-weight: bold;">「少額短期保険業者による報告又は資料の提出」</span></td>
+</tr>
+<tr>
+ <th>備考</th>
+ <td>
+  <ul>
+   <li>毎月5日の報告は、会計事務所より前月末時点の事業費とキャッシュ残の連携されるので、それを元に作成すること。</li>
+   <li>毎月15日、25日の報告は、10日時点・20日時点の「普通預金口座と収納口座、両方のキャッシュ残」をOAGライフコンシェルジュに照会すること。</li>
+   <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
+   <li>上記とは別に、<span style="font-weight: bold;">毎月10日</span>にハース・ジャパン社の試算表（前々月末）を提出すること。</li>
+  </ul>
+ </td>
 </tr>
 </table>
  
