--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -94,18 +94,12 @@
  <th>備考</th>
  <td>
   <ul>
-   <li>毎月5日の報告は、会計事務所より前月末時点の事業費とキャッシュ残の連携されるので、それを元に作成すること。</li>
-   <li>毎月15日、25日の報告は、10日時点・20日時点の「普通預金口座と収納口座、両方のキャッシュ残」をOAGライフコンシェルジュに照会すること。</li>
+   <li>会計事務所より前月末時点の事業費とキャッシュ残の連携されるので、それを元に作成すること。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
-   <li>上記とは別に、<span style="font-weight: bold;">毎月10日</span>にハース・ジャパン社の試算表（前々月末）を提出すること。</li>
   </ul>
  </td>
 </tr>
 </table>
-<p><span style="font-weight: bold;">毎月20日</span>に以下のファイルを<a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">
- FIMOSシステム（要Gビズ）で提出</p>
-<p><a href="https://drive.google.com/uc?export=download&id=1jd7h6f17rC_hpOnCyivWJG18rT649NXg" download>
- 「F203134-N2030101_YP413_000_S100001_01-Ver202403((S100001)オフサイト・モニタリング報告様式（月次）［S100001］).xlsx」</a></p>
 </section>
  
 </main>
