--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -88,7 +88,7 @@
 </tr>
 <tr>
  <th>提出方法</th>
- <td><a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">FIMOSシステム（要Gビズ）1</a></td>
+ <td><a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">FIMOSシステム（要Gビズ）</a></td>
 </tr>
 <tr>
  <th>備考</th>
