--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -8,7 +8,6 @@
     <a href="record2.html">発送記録</a>
     <a href="https://docs.google.com/spreadsheets/d/1Ji9XBCrZWjnN825q3XS8hD3dCRZcHTz694QB2Cu_Z08/edit?usp=sharing" target="_blank">対応記録（パルモ関連）</a>
     <a href="https://docs.google.com/spreadsheets/d/1kO_0TWbw-EGkrS5Kco2glB_1GcPdkdJaH8xgU4kL8Dk/edit?usp=sharing" target="_blank">管理台帳（パルモ関連）</a>
-    <a href="memo.html">memo</a>
 <!--
     <a href="https://docs.google.com/spreadsheets/d/1PVdUNDANi_pf1kJ2YH2YOkIMWF9yFbxdF9_5mrTWOf8/edit?usp=sharing" target="_blank">不備管理シート</a>
 -->
@@ -42,10 +41,18 @@
     <a href="contact.html">連絡先一覧</a>
   </div>
 </div>
-    
+
 <div class="ac-box">
   <input id="ac-5" name="accordion-4" type="checkbox">
-  <label for="ac-5">■ 外部リンク</label>
+  <label for="ac-5">■ 当局対応</label>
+  <div class="open">
+    <a href="memo.html">memo</a>
+  </div>
+</div>
+  
+<div class="ac-box">
+  <input id="ac-6" name="accordion-5" type="checkbox">
+  <label for="ac-6">■ 外部リンク</label>
   <div class="open">
     <a href="https://kizuna-ssi.jp/" target="_blank">コーポレートサイト</a>
     <a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">金融庁 申請届出一覧</a>
@@ -57,32 +64,16 @@
 </div>
 
 <div class="ac-box">
-  <input id="ac-6" name="accordion-5" type="checkbox">
-  <label for="ac-6">■ 作成中</label>
+  <input id="ac-7" name="accordion-6" type="checkbox">
+  <label for="ac-7">■ 作成中</label>
   <div class="open">
     <a href="https://kizuna-ssi.github.io/sub/index.html" target="_blank">コーポレートサイトv2</a>
     <a href="https://kizuna-ssi.net/" target="_blank">代理店向けサイト</a>
     <a href="https://kizuna-ssi.jp/agency-lp" target="_blank">ランディングページ</a>
-  </div>
-</div>
-  
-<!--
-<div class="ac-box">
-  <input id="ac-7" name="accordion-6" type="checkbox">
-  <label for="ac-7">■ eラーニング</label>
-  <div class="open">
     <a href="learning1.html">商品研修</a>
+    <a href="application_entry.html">web申込案内</a>
+    <a href="https://kizuna-ssi.github.io/application/" target="_blank">web申込フォーム</a>    
   </div>
 </div>
-
-<div class="ac-box">
-  <input id="ac-8" name="accordion-7" type="checkbox">
-  <label for="ac-8">■ web申込（工事中）</label>
-  <div class="open">
-   <a href="application_entry.html">web申込案内</a>
-    <a href="https://kizuna-ssi.github.io/application/" target="_blank">web申込フォーム</a>
-  </div>
-</div>
--->
-  
+    
 </nav>
