--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -34,7 +34,7 @@
 <main>
 
 <section>
-<h2>報告徴求命令の提出書類とスケジュール</h2>
+<h2>報告徴求命令のスケジュールと提出書類</h2>
 <table class="ta2">
  <tr>
   <th>スケジュール</th>
@@ -70,7 +70,7 @@
 </section>
 
 <section>
-<h2>オフサイトの提出書類とスケジュール</h2>
+<h2>オフサイトのスケジュールと提出書類</h2>
 <table class="ta2">
  <tr>
   <th>スケジュール</th>
@@ -82,10 +82,6 @@
  「F203134-N2030101_YP413_000_S100001_01-Ver202403((S100001)オフサイト・モニタリング報告様式（月次）［S100001］).xlsx」</a></a>
   </td>
  </tr>
-<tr>
- <th>提出先</th>
- <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
-</tr>
 <tr>
  <th>提出方法</th>
  <td><a href="https://fimos.fsa.go.jp/fimos-kyoutu/SFIUS010001a000" target="_blank">FIMOSシステム（要Gビズ）</a></td>
