--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -91,6 +91,7 @@
  <td>
   <ul>
    <li>会計事務所より前月末時点の事業費とキャッシュ残の連携されるので、それを元に作成すること。</li>
+   <li>純資産の額も会計事務所より連携されるが、売上実績の確定の都合上、連携時期は毎月中旬ごろとなる。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
   </ul>
  </td>
