--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -61,7 +61,8 @@
    <li>毎月15日、25日の報告は、10日時点・20日時点の普通預金口座と収納口座、両方のキャッシュ残をOAGライフコンシェルジュに照会すること。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出ファイルの日付は提出日に訂正してから提出すること。</li>
-   <li>提出したファイルの過去分は<a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link">こちら（Googleドライブ）</a></li>
+   <li>提出したファイルの過去分は<span style="font-weight: bold;">
+    <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link">こちら（Googleドライブ）</a></span></li>
    <li>上記とは別に、<span style="font-weight: bold;">毎月10日</span>にハース・ジャパン社の試算表（前々月末）を提出すること。</li>
   </ul>
  </td>
