--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -79,8 +79,7 @@
  </tr>
  <tr>
   <th>提出物</th>
-  <td><a href="https://drive.google.com/uc?export=download&id=1jd7h6f17rC_hpOnCyivWJG18rT649NXg" download>
- 「F203134-N2030101_YP413_000_S100001_01-Ver202403((S100001)オフサイト・モニタリング報告様式（月次）［S100001］).xlsx」</a></a>
+  <td>「F203134-N2030101_YP413_000_S100001_01-Ver202403((S100001)オフサイト・モニタリング報告様式（月次）［S100001］).xlsx」</a>
   </td>
  </tr>
 <tr>
