--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -62,7 +62,7 @@
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出ファイルの日付は提出日に訂正してから提出すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
-   <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link">こちら（Googleドライブ）</a></span></li>
+   <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
    <li>上記とは別に、<span style="font-weight: bold;">毎月10日</span>にハース・ジャパン社の試算表（前々月末）を提出すること。</li>
   </ul>
  </td>
@@ -94,7 +94,7 @@
    <li>純資産の額も会計事務所より連携されるが、売上実績の確定の都合上、連携時期は毎月中旬ごろとなる。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
-   <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link">こちら（Googleドライブ）</a></span></li>
+   <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
   </ul>
  </td>
 </tr>
