--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -59,7 +59,21 @@
     <span style="font-size: 100%; font-weight: bold;">【 本社 】</span><br>
     <span style="font-size: 100%;">〒465-0092　愛知県名古屋市名東区社台3-105</span><br>
     <span style="font-size: 100%;">TEL：052-737-8900</span><br>
-  </p> 
+    <span style="font-size: 100%;">Mail：nishii@hearse-japan.co.jp（西井 薫）</span><br>  
+  </p><br>
+    <p>
+    <span style="font-size: 130%; font-weight: bold;">一般社団法人 日本少額短期保険協会</span><br>
+    <span style="font-size: 100%;">〒104-0032　東京都中央区八丁堀３丁目12-8-2F</span><br>
+    <span style="font-size: 100%;">TEL：03-6222-4422</span><br>
+    <span style="font-size: 100%;">Mail：nishii@hearse-japan.co.jp（西井 薫）</span><br>  
+    </p><br>
+     <p>
+    <span style="font-size: 130%; font-weight: bold;">ＯＡＧ税理士法人</span><br>
+    <span style="font-size: 100%; font-weight: bold;">【 タックスアドバイザリー第3部 】</span><br>
+    <span style="font-size: 100%;">〒102-0076　東京都千代田区五番町6番地2ホーマットホライゾン</span><br>
+    <span style="font-size: 100%;">TEL：03-3237-7530</span><br>
+    <span style="font-size: 100%;">Mail：tomoki_uemae@oag-tax.co.jp（上前 友輝）</span><br>      
+  </p><br>
 </section>
 
 
