--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/format.html
@@ -120,11 +120,11 @@
 </tr>
 <tr>
 <th>勉強会資料</th>
-<td>2024年6月の勉強会資料</td>
+<td>勉強会資料</td>
 <td><a href="pdf/study_materials.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
-<th>重要事項説明書・概要</th>
+<th>重要事項説明書の概要</th>
 <td>重要事項説明書の概要</td>
 <td><a href="pdf/overview.pdf" target="_blank">PDF</a></td>
 </tr>
@@ -161,7 +161,7 @@
 </tr>
 <tr>
 <th>流動性リスク管理規程</th>
-<td>流動性リスク管理規程</td>
+<td>流動性リスク管理規程（修正前）</td>
 <td><a href="pdf/Liquidity_risk.pdf" target="_blank">PDF</a></td>
 </tr>
 <tr>
