--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -100,7 +100,20 @@
 </tr>
 </table>
 </section>
- 
+
+<section>
+<h2>主要株主承認申請（2024/11/13時点）</h2>
+<table class="ta2">
+ <tr>
+  <th>概要</th>
+  <td></td>
+ </tr>
+ <tr>
+  <th>提出書類</th>
+  <td><a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">Googleドライブ</a></td>
+ </tr>
+
+</table>
 </main>
 
 
