--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -34,7 +34,7 @@
 <main>
 
 <section>
-<h2>報告徴求命令のスケジュールと提出書類</h2>
+<h2>報告徴求命令に基づく報告</h2>
 <table class="ta2">
  <tr>
   <th>スケジュール</th>
@@ -60,7 +60,6 @@
    <li>毎月5日の報告は、会計事務所より前月末時点の事業費とキャッシュ残の連携されるので、それを元に作成すること。</li>
    <li>毎月15日、25日の報告は、10日時点・20日時点の普通預金口座と収納口座、両方のキャッシュ残をOAGライフコンシェルジュに照会すること。</li>
    <li>成約件数と保険料収入は、基幹システムを確認すること。</li>
-   <li>提出ファイルの日付は提出日に訂正してから提出すること。</li>
    <li>提出したファイルの過去分は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1ga0h0Hdn3f_PnGbiSC2SXCKazHaTH4Yw?usp=drive_link" target="_blank">こちら（Googleドライブ）</a></span></li>
    <li>上記とは別に、<span style="font-weight: bold;">毎月10日</span>にハース・ジャパン社の試算表（前々月末）を提出すること。</li>
@@ -71,7 +70,7 @@
 </section>
 
 <section>
-<h2>オフサイトのスケジュールと提出書類</h2>
+<h2>オフサイト・モニタリング報告</h2>
 <table class="ta2">
  <tr>
   <th>スケジュール</th>
