--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -109,9 +109,17 @@
  </tr>
  <tr>
   <th>提出書類</th>
-  <td><a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">Googleドライブ</a></td>
+  <td><a href="https://laws.e-gov.go.jp/law/408M50000040005/#Mp-At_211_72">提出書類（保険業法施行規則 第211条の72　第3項1～3号）</a></td>   
  </tr>
-
+ <tr>
+ <th>備考</th>
+ <td>
+  <ul>
+   <li>提出したファイルの保存先は<span style="font-weight: bold;">
+   <a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
+  </ul>
+ </td>
+ </tr>
 </table>
 </main>
 
