--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -103,13 +103,19 @@
 <section>
 <h2>主要株主承認申請（2024/11/13時点）</h2>
 <table class="ta2">
- <tr>
-  <th>概要</th>
-  <td></td>
- </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ 手続き名は<span style="font-weight: bold;">「少額短期保険主要株主の承認・届出関係手続」</span></td>
+</tr>
  <tr>
   <th>提出書類</th>
-  <td><a href="https://laws.e-gov.go.jp/law/408M50000040005/#Mp-At_211_72">提出書類（保険業法施行規則 第211条の72　第3項1～3号）</a></td>   
+  <td><a href="https://laws.e-gov.go.jp/law/408M50000040005/#Mp-At_211_72" target="_blank">
+   <span style="font-weight: bold;">提出書類（保険業法施行規則 第211条72-3 1～3号）</span></a></td>   
  </tr>
  <tr>
  <th>備考</th>
