--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -113,15 +113,15 @@
  手続き名は<span style="font-weight: bold;">「少額短期保険主要株主の承認・届出関係手続」</span></td>
 </tr>
  <tr>
-  <th>提出書類</th>
+  <th>提出物</th>
   <td><a href="https://laws.e-gov.go.jp/law/408M50000040005/#Mp-At_211_72" target="_blank">
-   <span style="font-weight: bold;">提出書類（保険業法施行規則 第211条72-3 1～3号）</span></a></td>   
+   <span style="font-weight: bold;">保険業法施行規則 第211-72-3-1～2号</span></a>に定められた各種書類</td>   
  </tr>
  <tr>
  <th>備考</th>
  <td>
   <ul>
-   <li>提出したファイルの保存先は<span style="font-weight: bold;">
+   <li>提出するファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
   </ul>
  </td>
