--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -123,6 +123,7 @@
   <ul>
    <li>提出するファイルの保存先は<span style="font-weight: bold;">
    <a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
+   <li>東海財務局の市原様より「提出物のうち特に理由書は、2024/10/25に太田代表と面談したときの内容を踏まえて作成すること」との指示あり。</li>
   </ul>
  </td>
  </tr>
