--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -128,6 +128,36 @@
  </td>
  </tr>
 </table>
+</section>
+
+<section>
+<h2>流動性リスク管理規定（2024/11/13時点）</h2>
+<table class="ta2">
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td>メール（宛先は「hokenkantokushitsu@tk.lfb-mof.go.jp」）</td>
+</tr>
+ <tr>
+ <th>備考</th>
+ <td>
+  <ul>
+   <li>電子申請ではなく、メールで提出すること</li>
+   <li>2024/10/31　一回目の提出　→　修正指示</li>
+   <li>2024/11/01　二回目の提出　→　再度の修正指示</li>
+   <li>再度の修正指示内容は、「第４条の管理方法について、この内容では具体的な方法がわからない。
+    ①～③をより詳細かつ具体的に記載するか、別紙でもいいので実務マニュアルを提出してほしい。
+    （たとえば、逼迫度とあるがどのような基準か。モニタリングとあるがどの部署の何をどのように確認するか…等々）
+    期限は今月末までで、提出方法はメールで」とのこと。</li>
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
+ 
 </main>
 
 
