--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -145,13 +145,12 @@
  <th>備考</th>
  <td>
   <ul>
-   <li>電子申請ではなく、メールで提出すること</li>
-   <li>2024/10/31　一回目の提出　→　修正指示</li>
-   <li>2024/11/01　二回目の提出　→　再度の修正指示</li>
+   <li>一回目の提出（2024/10/31）→　修正指示</li>
+   <li>二回目の提出（2024/11/01）→　再度の修正指示</li>
    <li>再度の修正指示内容は、「第４条の管理方法について、この内容では具体的な方法がわからない。
     ①～③をより詳細かつ具体的に記載するか、別紙でもいいので実務マニュアルを提出してほしい。
     （たとえば、逼迫度とあるがどのような基準か。モニタリングとあるがどの部署の何をどのように確認するか…等々）
-    期限は今月末までで、提出方法はメールで」とのこと。</li>
+    期限は2024年11月末まで。提出方法はメールで」とのこと。</li>
   </ul>
  </td>
  </tr>
