--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -103,6 +103,10 @@
 <section>
 <h2>主要株主承認申請（2024/11/13時点）</h2>
 <table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td><span style="font-weight: bold;">なるべく早く</span></td>
+ </tr>
 <tr>
  <th>提出先</th>
  <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
@@ -133,6 +137,10 @@
 <section>
 <h2>流動性リスク管理規定（2024/11/13時点）</h2>
 <table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td><span style="font-weight: bold;">期限：2024年11月末</span></td>
+ </tr>
 <tr>
  <th>提出先</th>
  <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
@@ -151,6 +159,34 @@
     ①～③をより詳細かつ具体的に記載するか、別紙でもいいので実務マニュアルを提出してほしい。
     （たとえば、逼迫度とあるがどのような基準か。モニタリングとあるがどの部署の何をどのように確認するか…等々）
     期限は2024年11月末まで。提出方法はメールで」とのこと。</li>
+  </ul>
+ </td>
+ </tr>
+</table>
+</section>
+
+<section>
+<h2>少額短期保険募集人の廃業等の届出</h2>
+<table class="ta2">
+ <tr>
+  <th>スケジュール</th>
+  <td><span style="font-weight: bold;">2024年12月初旬</span></td>
+ </tr>
+<tr>
+ <th>提出先</th>
+ <td>財務省 東海財務局 理財部 金融監督第４課 保険監督室</td>
+</tr>
+<tr>
+ <th>提出方法</th>
+ <td><a href="https://denshi-shinsei.fsa.go.jp/ja/sinsei-list/" target="_blank">電子申請（要Gビズ）</a>
+ 手続き名は<span style="font-weight: bold;">「少額短期保険募集人の廃業等の届出」</span></td>
+</tr>
+ <tr>
+ <th>備考</th>
+ <td>
+  <ul>
+   <li>提出するファイルの保存先は<span style="font-weight: bold;">
+   <a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
   </ul>
  </td>
  </tr>
