--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -186,7 +186,8 @@
  <td>
   <ul>
    <li>提出するファイルの保存先は<span style="font-weight: bold;">
-   <a href="https://drive.google.com/drive/folders/1lbWOIpdon25UlQNhnoZ_1nuAMNFTKx31?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
+   <a href="https://drive.google.com/drive/folders/1QiNZl8FZP11R8Npxms2M93LDFELdvl_b?usp=drive_link" target=_blank">こちら（Googleドライブ）</a></span></li>
+   <li>↑のファイルは2024年12月2日を提出日として作成しているため、異なる日で提出する場合、提出日をすべて修正すること。</li>
   </ul>
  </td>
  </tr>
