--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -61,7 +61,9 @@
     <a href="https://kizuna-ssi.jp/wp-admin" target="_blank">Word Press</a>
     <a href="https://www.css-osaka.com" target="_blank">CSS</a>
     <a href="https://kizuna-ssi.net/" target="_blank">代理店向けサイト</a>
-    <a href="https://kizuna-ssi.jp/agency-lp" target="_blank">ランディングページ</a>  
+    <a href="https://kizuna-ssi.jp/agency01" target="_blank">パルモの死亡保険</a>  
+    <a href="https://docs.google.com/spreadsheets/d/1XfpzUThSraqAjL7_gVdD5aWpnkzwDGUU/edit?usp=sharing&ouid=112711535464855856209&rtpof=true&sd=true" target="_blank">
+      引継資料</a>  
   </div>
 </div>
 
