--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -61,10 +61,10 @@
   <input id="ac-7" name="accordion-6" type="checkbox">
   <label for="ac-7">■ 引継関連</label>
   <div class="open">
-     <a href="https://docs.google.com/spreadsheets/d/1XfpzUThSraqAjL7_gVdD5aWpnkzwDGUU/edit?usp=sharing&ouid=112711535464855856209&rtpof=true&sd=true" target="_blank">
+     <a href="https://docs.google.com/spreadsheets/d/1WRq_nwq2ygLtDvc4HGL2z1Hfpixw5rQiPny4rrX_0wQ/edit?usp=sharing" target="_blank">
       引継資料</a>    
-    <a href="memo.html">memo</a>
-      </div>
+    <a href="memo.html">memo</a>    
+  </div>
 </div>
   
 </nav>
