--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/navigation.html
@@ -20,8 +20,8 @@
   <div class="open">
     <a href="quotation_age.html">見積（通常告知型）</a>
     <a href="quotation_age2.html">見積（引受基準緩和型）</a>
-    <!--<a href="quotation.html">見積（生年月日入力）</a>-->
-    <a href="application_print.html">申込書印刷（仮）</a>
+    <!--<a href="quotation.html">見積（生年月日入力）</a>
+    <a href="application_print.html">申込書印刷（仮）</a>-->
   </div>
 </div>
 
