--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/authorities.html
@@ -170,7 +170,7 @@
 <table class="ta2">
  <tr>
   <th>スケジュール</th>
-  <td><span style="font-weight: bold;">2024年12月初旬</span></td>
+  <td><span style="font-weight: bold;">2024年12月2日</span></td>
  </tr>
 <tr>
  <th>提出先</th>
