--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/contact.html
@@ -85,7 +85,11 @@
     <span style="font-size: 100%;">TEL：052-851-1212</span><br>
     <span style="font-size: 100%;">Mail：mizukami@jts758.com（水上）</span><br>      
   </p><br>
-
+    <p>
+    <span style="font-size: 130%; font-weight: bold;">株式会社シーエスエス</span><br>
+    <span style="font-size: 100%;">〒541-0051 大阪市中央区備後町3-6-2</span><br>
+    <span style="font-size: 100%;">TEL：06-4708-4380</span><br>
+  </p><br>
  
 </section>
 
