--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -36,23 +36,17 @@
 <section>
 <h2>Memo</h2>
 <table class="ta2">
- <tr>
-  <th>業務用の携帯電話</th>
-   </tr>
   <tr>
-  <td>11月20日の17時以降、03プラスをログアウトした状態で東京事務所へ郵送予定。</td>
+  <td><span style="font-weight:bold;">業務用携帯</span><br>
+   11月20日の17時以降、03プラスをログアウトした状態で東京事務所へ郵送予定。</td>
  </tr>
   <tr>
-  <th>名古屋事務所の固定電話</th>
-    </tr>
-  <tr>
-  <td>11月20日の17時以降、ボイスワープで東京事務所へ転送予定。</td>
+  <td>固定電話<br>
+   11月20日の17時以降、ボイスワープで東京事務所へ転送予定。</td>
  </tr>
   <tr>
-  <th>名古屋事務所への郵便物</th>
-    </tr>
-  <tr>
-  <td>受取人が不在となるため、東京事務所へ転送予定。</td>
+  <td>郵便物<br>
+   受取人が不在となるため、東京事務所へ転送予定。</td>
  </tr>
 </table>
 </section>
