--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -37,16 +37,28 @@
 <h2>Memo</h2>
 <table class="ta2">
   <tr>
-  <td><span style="font-weight:bold;">業務用携帯</span><br>
-   11月20日の17時以降、03プラスをログアウトした状態で東京事務所へ郵送予定。</td>
+  <td>
+   <span style="font-weight:bold;">業務用携帯</span><br>
+  11月20日の17時以降、03プラスをログアウトした状態で東京事務所へ郵送予定です。<br>
+  11月21日以降は、03プラスを東京事務所で受電できるようにしてください。</td>
  </tr>
   <tr>
-  <td>固定電話<br>
-   11月20日の17時以降、ボイスワープで東京事務所へ転送予定。</td>
- </tr>
+  <td>
+   <span style="font-weight:bold;">固定電話</span><br>
+  11月20日の17時以降、ボイスワープで東京事務所へ転送予定です。<br>
+  11月21日以降は、03プラスを東京事務所で受電できるようにしてください。</td>
+  </tr>
   <tr>
-  <td>郵便物<br>
-   受取人が不在となるため、東京事務所へ転送予定。</td>
+  <td>
+   <span style="font-weight:bold;">郵便物</span><br>
+  受取人が不在となるため、11月21日以降は東京事務所へ転送予定です。<br>
+  ※e転居にて手続き済みです。<br>
+   ------------------------<br>
+   https://mypage.jpid.pf.japanpost.jp/my<br>
+   toshifumi_kanami@kizuna-ssi.jp<br>
+   2dUW.E(Qci.DMh2<br>
+   [転居届受付番号]　R887832220<br>
+  </td>
  </tr>
 </table>
 </section>
