--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -54,9 +54,9 @@
   受取人が不在となるため、11月21日以降は東京事務所へ転送予定です。<br>
   ※e転居にて手続き済みです。<br>
    ------------------------<br>
-   https://mypage.jpid.pf.japanpost.jp/my<br>
-   toshifumi_kanami@kizuna-ssi.jp<br>
-   2dUW.E(Qci.DMh2<br>
+   [URL]　https://mypage.jpid.pf.japanpost.jp/my<br>
+   [mail]　toshifumi_kanami@kizuna-ssi.jp<br>
+   [pass]　2dUW.E(Qci.DMh2<br>
    [転居届受付番号]　R887832220<br>
   </td>
  </tr>
