--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -40,24 +40,33 @@
   <td>
    <span style="font-weight:bold;">業務用携帯</span><br>
   11月20日の17時以降、03プラスをログアウトした状態で東京事務所へ郵送予定です。<br>
-  11月21日以降は、03プラスを東京事務所で受電できるようにしてください。</td>
+  11月21日以降は、03プラスを東京事務所で受電できる体制にしてください。</td>
  </tr>
   <tr>
   <td>
    <span style="font-weight:bold;">固定電話</span><br>
   11月20日の17時以降、ボイスワープで東京事務所へ転送予定です。<br>
-  11月21日以降は、03プラスを東京事務所で受電できるようにしてください。</td>
+  11月21日以降は、東京事務所で受電できる体制にしてください。</td>
   </tr>
   <tr>
   <td>
    <span style="font-weight:bold;">郵便物</span><br>
   受取人が不在となるため、11月21日以降は東京事務所へ転送予定です。<br>
-  ※e転居にて手続き済みです。<br>
+  ※「e転居」にて手続済（11/13付）<br>
    ------------------------<br>
    [URL]　https://mypage.jpid.pf.japanpost.jp/my<br>
    [mail]　toshifumi_kanami@kizuna-ssi.jp<br>
    [pass]　2dUW.E(Qci.DMh2<br>
    [転居届受付番号]　R887832220<br>
+  </td>
+ </tr>
+ <tr>
+  <td>
+   <span style="font-weight:bold;">連絡先</span><br>
+  11月21日以降、金海への連絡が必要な場合、以下の連絡先にお願いします。<br>
+   ------------------------<br>
+   [Tel]　090-3715-4871<br>
+   [mail]　haitug08@gmail.com
   </td>
  </tr>
 </table>
