--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -54,7 +54,7 @@
   受取人が不在となるため、11月21日以降は東京事務所へ転送予定です。<br>
   ※「e転居」にて手続済（11/13付）<br>
    ------------------------<br>
-   [URL]　https://mypage.jpid.pf.japanpost.jp/my<br>
+   [URL]　<a href="https://mypage.jpid.pf.japanpost.jp/my" target="_blank">https://mypage.jpid.pf.japanpost.jp/my</a><br>
    [mail]　toshifumi_kanami@kizuna-ssi.jp<br>
    [pass]　2dUW.E(Qci.DMh2<br>
    [転居届受付番号]　R887832220<br>
