--- a/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
+++ b/3c94c0b1c3ce114c39b16272a86b47e0ed7de7c13a67b6b93eff0130ccd408f9/memo.html
@@ -63,9 +63,24 @@
    <tr>
     <td>
    <span style="font-weight:bold;">PC（デスクトップ・ノート）</span><br>
-     11月20日の17時30分以降、名古屋事務所内のPC（デスクトップ・ノート）は電源を切った状態とします。</br>
+     11月20日の17時30分以降、名古屋事務所内のPC（デスクトップ・ノート）の電源を落とします。</br>
      リモートアクセスでの対応も不可となりますので、予めご了承ください。</td>
+  </tr>   
+ <tr>
+  <td>
+   <span style="font-weight:bold;">キャビネット</span><br>
+     名古屋事務所内のキャビネットは、最上段のみ施錠しています。</br>
+     ※「5963」で解錠してください。</td>
   </tr>
+ <tr>
+  <td>
+   <span style="font-weight:bold;">電子錠</span><br>
+     名古屋事務所ドアの電子錠について、もし電池が無くなり動作しなくなった場合、アルカリ9V(6LR61)電池を端子に接触させ、解錠する必要があります。</br>
+     ＞取扱説明書</br>
+ <a href="http://www.lock-search.com/add_pdf/kabadrive/kaba-drive-toriatukai.pdf" target="_blank">
+ http://www.lock-search.com/add_pdf/kabadrive/kaba-drive-toriatukai.pdf</a></td>
+  </tr>
+
  <tr>
   <td>
    <span style="font-weight:bold;">連絡先</span><br>
